@@ -14,18 +14,24 @@ definition
                 items cardinality matches {0..*} matches {
                     ELEMENT[at10005] matches {	-- c_quantity     
 	                    value matches {
-							C_QUANTITY <
+							C_DV_QUANTITY <
 								property = <[openehr::128]>
 								list = <									
 									["1"] = <
 										units = <"yr">
 										magnitude = <|0.0..200.0|>
+										precision = <|2|>
 									>
 									["2"] = <
 										units = <"mth">
 										magnitude = <|1.0..36.0|>
+										precision = <|2|>
 									>									
 								>
+								-- TODO fix it
+								-- assumed_value = <
+								--	units = <"yr">
+								-- >
 							>
 						}
                     }		
