@@ -1,3 +1,6 @@
+2007/02/08
+.updated C_DV_QUANTITY parsing
+
 2007/02/07
 .fixed parsing issue caused by the order of description attributes
 
